added movie api, started subscriptions. unfinished
